Made sure link worked to get to hw2 from main page. Added links to hw2 main page. Installed 4 picutres and information with css formatting. Worked on boxes. Added boarders. Uploaded resume. Made CSS formatiing to resume (changed font of title. Centered on div. Aligned text left. Still need to fix info bug on main page.

--- a/ResumeStylesheet.css
+++ b/ResumeStylesheet.css
@@ -8,3 +8,10 @@ h1{
 		font-family: Broadway; Impact; Times New Roman;
 }
 
+
+#wrap { 
+	margin:0 auto; 
+	width:95%; 
+	text-align:left; 
+	border: 15px solid black; 
+	}
